# handlers/http_handler.go
@@ -8,11 +8,14 @@ import (
 	"os"
 	"regexp"
 	"sort"
+	_ "sort"
 	"strconv"
+	_ "strconv"
 	"strings"
+	_ "strings"
 	"sync"
 	"time"
-	"twitterLikeHW/generator"
+	_ "twitterLikeHW/generator"
 
 	//"twitterLikeHW/generator"
 	"twitterLikeHW/storage"
@@ -23,23 +26,18 @@ var authorIdPattern = regexp.MustCompile(`[0-9a-f]+`)
 type HTTPHandler struct {
 	StorageMu  sync.RWMutex
 	Storage    storage.Storage
-	StorageOld map[storage.PostId]storage.PostOld
+	StorageOld map[primitive.ObjectID]storage.Post
 }
 
 type PutAllPostsResponseData struct {
 	Posts    []storage.Post     `json:"posts"`
 	NextPage primitive.ObjectID `json:"nextPage"`
 }
-type PutAllPostsResponseDataOld struct {
-	Posts    []storage.PostOld `json:"posts"`
-	NextPage storage.PostId    `json:"nextPage"`
-}
+
 type PutAllPostsResponseNoNext struct {
 	Posts []storage.Post `json:"posts"`
 }
-type PutAllPostsResponseNoNextOld struct {
-	Posts []storage.PostOld `json:"posts"`
-}
+
 type PutRequestData struct {
 	Text storage.Text `json:"text"`
 }
@@ -73,22 +71,25 @@ func (h *HTTPHandler) HandleCreatePost(rw http.ResponseWriter, r *http.Request) 
 	}
 
 	storageType := os.Getenv("STORAGE_MODE")
-	var newPostOld storage.PostOld
+	//storageType := "mongo"
+
+	//var newPostOld storage.PostOld
+	//var newPostMongo storage.Post
 	var newPost storage.Post
 	var rawResponse []byte
 
 	if storageType == "inmemory" {
-		newId, _ := generator.GenerateBase64ID(6)
-		newPostOld = storage.PostOld{
-			Id:        storage.PostId(newId) + "G",
-			Text:      post.Text,
-			AuthorId:  storage.UserId(tokenHeader),
-			CreatedAt: storage.ISOTimestamp(time.Now().UTC().Format("2006-01-02T15:04:05.000Z")),
+		newPost = storage.Post{
+			Id:             primitive.NewObjectID(),
+			Text:           post.Text,
+			AuthorId:       storage.UserId(tokenHeader),
+			CreatedAt:      storage.ISOTimestamp(time.Now().UTC().Format("2006-01-02T15:04:05.000Z")),
+			LastModifiedAt: "",
 		}
 		h.StorageMu.Lock()
-		h.StorageOld[newPostOld.Id] = newPostOld
+		h.StorageOld[newPost.Id] = newPost
 		h.StorageMu.Unlock()
-		rawResponse, _ = json.Marshal(newPostOld)
+		rawResponse, _ = json.Marshal(newPost)
 	} else {
 		newPost, err = h.Storage.PutPost(r.Context(), post.Text, storage.UserId(tokenHeader))
 		if err != nil {
@@ -112,32 +113,102 @@ func (h *HTTPHandler) HandleGetPosts(rw http.ResponseWriter, r *http.Request) {
 	Id := storage.PostId(postId)
 
 	storageType := os.Getenv("STORAGE_MODE")
-	var postTextOld storage.PostOld
-	var postText storage.Post
+	//storageType := "mongo"
+
+	var currentPost storage.Post
 	var err error
 	var found bool
 	var rawResponse []byte
 
 	if storageType == "inmemory" {
 		h.StorageMu.RLock()
-		postTextOld, found = h.StorageOld[Id]
+		valueId, _ := primitive.ObjectIDFromHex(string(Id))
+		currentPost, found = h.StorageOld[valueId]
 		h.StorageMu.RUnlock()
 		if !found {
 			http.NotFound(rw, r)
 			return
 		}
-		rawResponse, _ = json.Marshal(postTextOld)
+		rawResponse, _ = json.Marshal(currentPost)
 	} else {
-		postText, err = h.Storage.GetPostById(r.Context(), Id)
+		currentPost, err = h.Storage.GetPostById(r.Context(), Id)
 		if err != nil {
 			http.NotFound(rw, r)
 			return
 		}
-		rawResponse, _ = json.Marshal(postText)
+		rawResponse, _ = json.Marshal(currentPost)
 	}
 	_, err = rw.Write(rawResponse)
 	if err != nil {
 		http.Error(rw, "Поста с указанным идентификатором не существует", http.StatusBadRequest)
+		return
+	}
+}
+
+func (h *HTTPHandler) HandlePatchPosts(rw http.ResponseWriter, r *http.Request) {
+	postId := strings.Trim(r.URL.Path, "/api/v1/posts/")
+	Id := storage.PostId(postId)
+	tokenHeader := r.Header.Get("System-Design-User-Id")
+	if tokenHeader == "" || !authorIdPattern.MatchString(tokenHeader) {
+		http.Error(rw, "problem with token", http.StatusUnauthorized)
+		return
+	}
+	var updatePostText PutRequestData
+	err := json.NewDecoder(r.Body).Decode(&updatePostText)
+	if err != nil {
+		http.Error(rw, err.Error(), http.StatusBadRequest)
+		return
+	}
+	rw.Header().Set("Content-Type", "application/json")
+	storageType := os.Getenv("STORAGE_MODE")
+	//storageType := "mongo"
+
+	var found bool
+	//var updatePostOld storage.PostOld
+	var updatePost storage.Post
+
+	if storageType == "inmemory" {
+		h.StorageMu.RLock()
+		valueId, _ := primitive.ObjectIDFromHex(string(Id))
+		updatePost, found = h.StorageOld[valueId]
+		h.StorageMu.RUnlock()
+		if !found {
+			http.NotFound(rw, r)
+			return
+		}
+		if updatePost.AuthorId != storage.UserId(tokenHeader) {
+			http.Error(rw, "wrong user for this post", http.StatusForbidden)
+			return
+		}
+		updatePost.LastModifiedAt = storage.ISOTimestamp(time.Now().UTC().Format("2006-01-02T15:04:05.000Z"))
+		updatePost.Text = updatePostText.Text
+		h.StorageMu.Lock()
+		h.StorageOld[updatePost.Id] = updatePost
+		h.StorageMu.Unlock()
+
+	} else {
+		updatePost, err = h.Storage.GetPostById(r.Context(), Id)
+		if err != nil {
+			http.NotFound(rw, r)
+			return
+		}
+		if updatePost.AuthorId != storage.UserId(tokenHeader) {
+			http.Error(rw, "wrong user for this post", http.StatusForbidden)
+			return
+		}
+
+		updatePost, err = h.Storage.PatchPostById(r.Context(), Id, updatePostText.Text, storage.UserId(tokenHeader))
+		if err != nil {
+			http.Error(rw, err.Error(), http.StatusBadRequest)
+			return
+		}
+	}
+
+	rawResponse, _ := json.Marshal(updatePost)
+	_, err = rw.Write(rawResponse)
+
+	if err != nil {
+		http.Error(rw, err.Error(), http.StatusBadRequest)
 		return
 	}
 }
@@ -164,93 +235,63 @@ func (h *HTTPHandler) HandleGetUserPosts(rw http.ResponseWriter, r *http.Request
 	Id := strings.TrimPrefix(userId, "/api/v1/users/")
 
 	storageType := os.Getenv("STORAGE_MODE")
+	//storageType := "mongo"
+
 	var finalResponse []storage.Post
-	var finalResponseOld []storage.PostOld
 	rawResponse := PutAllPostsResponseData{}
-	rawResponseOld := PutAllPostsResponseDataOld{}
 	var err error
 
 	if storageType == "inmemory" {
 		h.StorageMu.RLock()
 		for _, value := range h.StorageOld { //итерируемся по мапу постов и выводим пост если совпал айдишник автора и юзера в запросе
 			if value.AuthorId == storage.UserId(Id) {
-				finalResponseOld = append(finalResponseOld, value)
+				finalResponse = append(finalResponse, value)
 			}
 		}
 		h.StorageMu.RUnlock()
 
-		sort.Slice(finalResponseOld, func(i, j int) bool {
+		sort.Slice(finalResponse, func(i, j int) bool {
 			layout := "2006-01-02T15:04:05.000Z"
-			first, _ := time.Parse(layout, string(finalResponseOld[i].CreatedAt))
-			second, _ := time.Parse(layout, string(finalResponseOld[j].CreatedAt))
+			first, _ := time.Parse(layout, string(finalResponse[i].CreatedAt))
+			second, _ := time.Parse(layout, string(finalResponse[j].CreatedAt))
 			return first.After(second)
 		})
-
-		startPage := 0
-		for i, value := range finalResponseOld {
-			if pagetoken != "" && value.Id == storage.PostId(pagetoken) {
-				startPage = i
-			}
-		}
-		if pagetoken != "" && startPage == 0 {
-			http.Error(rw, "InvalidPageToken", http.StatusBadRequest)
-			return
-		}
-		finalResponseOld = finalResponseOld[startPage:]
-		returnResponseOld, _ := json.Marshal("")
-		if len(finalResponseOld) >= sizepage+1 {
-			rawResponseOld.Posts = finalResponseOld[0:sizepage]
-			rawResponseOld.NextPage = finalResponseOld[sizepage].Id
-			returnResponseOld, _ = json.Marshal(rawResponseOld)
-		} else {
-			returnResponseOld, _ = json.Marshal(PutAllPostsResponseNoNextOld{Posts: finalResponseOld})
-		}
-		if len(finalResponseOld) == 0 {
-			returnResponseOld, _ = json.Marshal(PutAllPostsResponseNoNextOld{Posts: make([]storage.PostOld, 0)})
-		}
-		_, err = rw.Write(returnResponseOld)
-		if err != nil {
-			http.Error(rw, err.Error(), http.StatusBadRequest)
-			return
-		}
-
-	} else {
+	} else if storageType == "mongo" {
 
 		finalResponse, err = h.Storage.GetPostsByUser(r.Context(), storage.UserId(Id))
 		if err != nil {
 			http.Error(rw, "YOU SUCK AT DB LOSER", http.StatusBadRequest)
 			return
 		}
+	}
 
-		startPage := 0
-		for i, value := range finalResponse {
-			valueId, _ := primitive.ObjectIDFromHex(pagetoken)
-			if pagetoken != "" && value.Id == valueId {
-				startPage = i
-			}
+	startPage := 0
+	for i, value := range finalResponse {
+		valueId, _ := primitive.ObjectIDFromHex(pagetoken)
+		if pagetoken != "" && value.Id == valueId {
+			startPage = i
 		}
-		if pagetoken != "" && startPage == 0 {
-			http.Error(rw, "InvalidPageToken", http.StatusBadRequest)
-			return
-		}
-		finalResponse = finalResponse[startPage:]
-		returnResponse, _ := json.Marshal("")
-		if len(finalResponse) >= sizepage+1 {
-			rawResponse.Posts = finalResponse[0:sizepage]
-			nextPage := finalResponse[sizepage].Id
-			rawResponse.NextPage = nextPage
-			returnResponse, _ = json.Marshal(rawResponse)
-		} else {
-			returnResponse, _ = json.Marshal(PutAllPostsResponseNoNext{Posts: finalResponse})
-		}
-		if len(finalResponse) == 0 {
-			returnResponse, _ = json.Marshal(PutAllPostsResponseNoNext{Posts: make([]storage.Post, 0)})
-		}
-		_, err = rw.Write(returnResponse)
-		if err != nil {
-			http.Error(rw, err.Error(), http.StatusBadRequest)
-			return
-		}
+	}
+	if pagetoken != "" && startPage == 0 {
+		http.Error(rw, "InvalidPageToken", http.StatusBadRequest)
+		return
+	}
+	finalResponse = finalResponse[startPage:]
+	returnResponseOld, _ := json.Marshal("")
+	if len(finalResponse) >= sizepage+1 {
+		rawResponse.Posts = finalResponse[0:sizepage]
+		rawResponse.NextPage = finalResponse[sizepage].Id
+		returnResponseOld, _ = json.Marshal(rawResponse)
+	} else {
+		returnResponseOld, _ = json.Marshal(PutAllPostsResponseNoNext{Posts: finalResponse})
+	}
+	if len(finalResponse) == 0 {
+		returnResponseOld, _ = json.Marshal(PutAllPostsResponseNoNext{Posts: make([]storage.Post, 0)})
+	}
+	_, err = rw.Write(returnResponseOld)
+	if err != nil {
+		http.Error(rw, err.Error(), http.StatusBadRequest)
+		return
 	}
 
 }
