# main.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"github.com/gorilla/mux"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 	"log"
 	"net/http"
 	"os"
@@ -9,6 +10,7 @@ import (
 	"twitterLikeHW/handlers"
 	"twitterLikeHW/storage"
 	"twitterLikeHW/storage/mongostorage"
+	"twitterLikeHW/storage/rediscachedstorage"
 )
 
 func NewServer() *http.Server {
@@ -17,27 +19,38 @@ func NewServer() *http.Server {
 	handler := &handlers.HTTPHandler{}
 
 	storageType := os.Getenv("STORAGE_MODE")
-	if storageType != "inmemory" {
+	//storageType := "mongo"
+
+	if storageType == "mongo" {
 		mongoUrl := os.Getenv("MONGO_URL")
 		//mongoUrl := "mongodb://localhost:27017"
 		mongoStorage := mongostorage.NewStorage(mongoUrl)
 		handler = &handlers.HTTPHandler{
 			Storage: mongoStorage,
 		}
-	} else {
+	} else if storageType == "inmemory" {
 		handler = &handlers.HTTPHandler{
-			StorageOld: make(map[storage.PostId]storage.PostOld),
+			StorageOld: make(map[primitive.ObjectID]storage.Post),
+		}
+	} else if storageType == "cached" {
+		mongoUrl := os.Getenv("MONGO_URL")
+		mongoStorage := mongostorage.NewStorage(mongoUrl)
+		redisUrl := os.Getenv("REDIS_URL")
+		cachedStorage := rediscachedstorage.NewStorage(redisUrl, mongoStorage)
+		handler = &handlers.HTTPHandler{
+			Storage: cachedStorage,
 		}
 	}
 
 	r.HandleFunc("/", handlers.HandleRoot).Methods("GET", "POST")
 	r.HandleFunc("/api/v1/posts", handler.HandleCreatePost).Methods(http.MethodPost)
 	r.HandleFunc("/api/v1/posts/{postId}", handler.HandleGetPosts).Methods(http.MethodGet)
+	r.HandleFunc("/api/v1/posts/{postId}", handler.HandlePatchPosts).Methods(http.MethodPatch)
 	r.HandleFunc("/api/v1/users/{userId}/posts", handler.HandleGetUserPosts).Methods(http.MethodGet)
 	r.HandleFunc("/maintenance/ping", handlers.HandlePing).Methods(http.MethodGet)
 
-	port := os.Getenv("SERVER_PORT")
-	//port := "8080"
+	//port := os.Getenv("SERVER_PORT")
+	port := "8080"
 	return &http.Server{
 		Handler:      r,
 		Addr:         ":" + port,
